# PyShearFix

./: LICENSE  README.md  pyproject.toml
examples/basic_batch/: ShearFixBatch.xlsx  main.py
src/pyshearfix/: __init__.py  calculation.py  column_layout.py  column_profile.py  ec2_annex.py  enumerations.py  loading.py  opening.py  reinforcement.py  shearfix.py  slab.py
tests/: test_basic.py
