[project]
name = "pyshearfix"
description = "A python package for generating ShearFix calculation files."
license = {file = "LICENSE"}
authors = [{ name="Mtichell Tesch", email="mitchell.tesch@robertbird.com.au" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["structural-engineering", "ShearFix"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
Repository = "https://github.com/pypa/sampleproject"

[tool.hatch.version]
path = "src/pyshearfix/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
